# SectorSync

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md
.github/workflows/: ci.yml  release.yml
crates/sectorsync/: Cargo.toml
crates/sectorsync-bench/: Cargo.toml
crates/sectorsync-bench/examples/: adaptive_cadence.rs  barrier_snapshot_reuse.rs  barrier_transport.rs  barrier_upgrade.rs  batch_aoi_reuse.rs  bounded_dedup_index.rs  budget_batch_scan.rs  cell_migration_reuse.rs  client_bridge.rs  client_mixed_receive_visit.rs  command_ingress.rs  component_remove_reuse.rs  core_queue_capacity.rs  deployment_routing.rs  deployment_stale_scan.rs  dynamic_gameplay.rs  endpoint_map_lookup.rs  event_drain_reuse.rs  frustum_visibility.rs  gateway_ack_ownership.rs  gateway_command_pipeline.rs  gateway_deadline_expiry.rs  gateway_deployment_dispatch.rs  gateway_expiry_scan.rs  gateway_session.rs  gateway_session_lookup.rs  generated_schema.rs  hotspot_split_reuse.rs  in_memory_batch_send.rs  in_memory_queue_capacity.rs  load_sampling.rs  load_sampling_reuse.rs  load_scheduler.rs  many_rooms.rs  multi_cell_bounds.rs  parallel_output_reuse.rs  parallel_replication.rs  priority_budget.rs  priority_top_k.rs  reliable_command_ingress.rs  (+33 more)
crates/sectorsync-bench/src/: lib.rs  main.rs
crates/sectorsync-bench/tests/: sdk_flow.rs  split_tuning.rs
crates/sectorsync-core/: Cargo.toml
crates/sectorsync-core/src/: barrier.rs  command.rs  component.rs  entity.rs  event.rs  gateway.rs  handoff.rs  hotspot.rs  ids.rs  interest.rs  lib.rs  policy.rs  prelude.rs  replication.rs  snapshot.rs  spatial.rs  spatial_index.rs  station.rs
crates/sectorsync-runtime/: Cargo.toml
crates/sectorsync-runtime/src/: deployment.rs  lib.rs  parallel.rs
crates/sectorsync-transport/: Cargo.toml  LICENSE
crates/sectorsync-transport/src/: lib.rs
crates/sectorsync-wire/: Cargo.toml
crates/sectorsync-wire/src/: lib.rs
crates/sectorsync/examples/: maintenance_flow.rs  quick_start.rs  replication_flow.rs
crates/sectorsync/src/: client.rs  gateway.rs  lib.rs  maintenance.rs  metrics.rs  prelude.rs  replication.rs  station.rs  transport.rs
docs/: README.md  api-redesign.md  gaps.md  migration-breaking-api.md  performance-acceptance.md  production-adapters.md  releasing.md  sdk-integration.md
