[workspace]
members = [
    "crates/sectorsync-core",
    "crates/sectorsync-wire",
    "crates/sectorsync-transport",
    "crates/sectorsync-runtime",
    "crates/sectorsync-bench",
]
resolver = "3"

[workspace.package]
version = "2026.7.10"
edition = "2024"
license = "MIT"
repository = "https://github.com/4fuu/SectorSync"
rust-version = "1.88"

[workspace.dependencies]
sectorsync-core = { version = "=2026.7.10", path = "crates/sectorsync-core" }
sectorsync-wire = { version = "=2026.7.10", path = "crates/sectorsync-wire" }
sectorsync-transport = { version = "=2026.7.10", path = "crates/sectorsync-transport" }
sectorsync-runtime = { version = "=2026.7.10", path = "crates/sectorsync-runtime" }

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
