[package]
name = "sectorsync-bench"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[[bin]]
name = "sectorsync-bench"
path = "src/main.rs"

[dependencies]
sectorsync-core = { path = "../sectorsync-core" }
sectorsync-transport = { path = "../sectorsync-transport" }
sectorsync-wire = { path = "../sectorsync-wire" }

[lints]
workspace = true
