[package]
name = "sectorsync-bench"
version.workspace = true
description = "Guarded examples and performance acceptance runner for SectorSync"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
publish = false

[[bin]]
name = "sectorsync-bench"
path = "src/main.rs"

[[example]]
name = "parallel_replication"
path = "examples/parallel_replication.rs"
required-features = ["parallel"]

[features]
default = []
simd = ["sectorsync-core/simd"]
parallel = ["sectorsync-runtime/parallel"]
optimized = ["simd", "parallel"]

[dependencies]
sectorsync-core.workspace = true
sectorsync-runtime.workspace = true
sectorsync-transport.workspace = true
sectorsync-wire.workspace = true

[lints]
workspace = true
