[package]
name = "sectorsync-runtime"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sectorsync-core = { path = "../sectorsync-core" }
sectorsync-transport = { path = "../sectorsync-transport" }
sectorsync-wire = { path = "../sectorsync-wire" }

[lints]
workspace = true
