[package]
name = "sectorsync-runtime"
version.workspace = true
description = "Bounded runtime bridges, load sampling, barriers, and migration orchestration for SectorSync"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
readme = "../../README.md"
documentation = "https://docs.rs/sectorsync-runtime"
keywords = ["gamedev", "networking", "replication", "runtime", "middleware"]
categories = ["game-development", "network-programming"]

[lib]
path = "src/lib.rs"

[dependencies]
sectorsync-core.workspace = true
sectorsync-transport.workspace = true
sectorsync-wire.workspace = true

[lints]
workspace = true
