[package]
name = "sectorsync-transport"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true

[lib]
path = "src/lib.rs"

[dependencies]
sectorsync-core = { path = "../sectorsync-core" }
sectorsync-wire = { path = "../sectorsync-wire" }

[lints]
workspace = true
